--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Personal Portfolio</title>
-        <link rel="stylesheet" href="Portfolio-Styles.css"/>
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="Portfolio-Styles.css"/>
+    <script src="https://kit.fontawesome.com/af1cf3e189.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <main>
+      <section class="heading">
         <header id="header">
-            <h1>My Personal Portfolio Webpage</h1>
+          <h1>Welcome</h1>
         </header>
-    </body>
+        <div class="author">
+          <p class="author-name">By Adrian Ayon</p>
+          <p class="publish-date">May 8, 2023</p>
+        </div>
+        <div class="icon">
+          <i class="fa-solid fa-gear fa-spin" style="color: #236AB9;"></i>
+        </div>
+      </section>  
+      <article id="introduction">
+        <h2>To Friends and Family-</h2>
+        <p class="speech">
+          This website will serve as a personal portfolio, showcasing my technical skills and certifications for web 
+          development. At the moment this is a work in progress. In addition, I am only granting access to friends and
+          family for research purposes and feedback. I urge that you check back periodically to view the progress I 
+          make on this website.
+        </p>
+        <div class="bottom-icon">
+          <i class="fa-solid fa-robot fa-shake" style="color: #236AB9;"></i>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
