--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
           </p>
         </div>
       </section>
-      <section id="projects"></section>
+      <section id="projects">
+        <h3>Projects</h3>
+        <div class="project-tile">
+          
+        </div>
+      </section>
   </body>
 </html>
