--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
   <body>
       <nav id="navbar">
         <ul class="nav-list">
-          <li>
+          <li class="nav-items">
             <a id="nav-link" href="#welcome-section">Welcome</a>
           </li>
-          <li>
+          <li class="nav-items">
             <a id="nav-link" href="#about-me">About Me</a>
           </li>
-          <li>
+          <li class="nav-items" >
+            <a id="nav-link" href="#certification">Certifications</a>
+          </li>
+          <li class="nav-items">
             <a id="nav-link" href="#projects">Projects</a>
           </li>
-          <li>
+          <li class="nav-items">
             <a id="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -39,6 +42,20 @@
             my real passion lies in engineering. I aspire to become a full-fledged 
             engineer and use my imagination to create things for the rest of my life.
           </p>
+        </div>
+      </section>
+      <section id="certification">
+        <h6>Certifications</h6>
+        <p class="certs-info">
+          Here you will find a list of programming certifications I have acquired
+          through, <a class="certs-info-link" href="https://www.freecodecamp.org" target="_blank">freeCodeCamp.org</a>.
+        </p> 
+        <div class="certs-container">
+          <ul class="certs">
+            <li class="certs-item">
+              <a class="c1" href="https://www.freecodecamp.org/certification/NoobMast3r-/responsive-web-design" target="_blank">Responsive Web Design</a> 
+            </li>
+          </ul>
         </div>
       </section>
       <section id="projects">
